# demo-fastapi

./: pyproject.toml
src/api/: config.py  deps.py  server.py  services.py
src/api/routes/: jokes.py
src/domain/: exceptions.py  joke.py
