[tool.poetry]
name = "demo-fastapi"
version = "0.1.0"
description = ""
authors = ["MaxHoefl <hoefl.max@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
